--- a/MobileApps/View/Cell/AllCollectionViewCell.xib
+++ b/MobileApps/View/Cell/AllCollectionViewCell.xib
@@ -53,6 +53,9 @@
                             <constraint firstAttribute="width" constant="24" id="TOJ-Mj-tAA"/>
                         </constraints>
                         <state key="normal" image="star" catalog="system"/>
+                        <connections>
+                            <action selector="favouriteButtonTap:" destination="gTV-IL-0wX" eventType="touchUpInside" id="SDB-Cq-OAl"/>
+                        </connections>
                     </button>
                 </subviews>
             </view>
