--- a/MobileApps/View/Base.lproj/Main.storyboard
+++ b/MobileApps/View/Base.lproj/Main.storyboard
@@ -70,26 +70,58 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="j3O-jf-KrQ"/>
-                    <connections>
-                        <outlet property="collectionView" destination="RXH-x5-VfD" id="pwS-tv-gGb"/>
-                        <outlet property="segmentView" destination="zCR-qA-fxT" id="NEt-cW-gAG"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="928.98550724637687" y="93.75"/>
         </scene>
-        <!--SecondVC-->
+        <!--View Controller-->
         <scene sceneID="4Xo-5t-0FA">
             <objects>
-                <viewController id="fyf-V1-ELz" customClass="SecondVC" customModule="MobileApps" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="fyf-V1-ELz" customClass="ViewController" customModule="MobileApps" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="arV-wH-fyx">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f6V-Sj-xp3" customClass="Segmentio" customModule="Segmentio">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                                <color key="backgroundColor" name="BasisTableBG"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="qzG-KY-Q4E"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AXd-Hb-kjE">
+                                <rect key="frame" x="0.0" y="50" width="414" height="1"/>
+                                <color key="backgroundColor" systemColor="systemGray2Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="jvt-Op-h8X"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="I72-KI-xkO">
+                                <rect key="frame" x="0.0" y="51" width="414" height="723"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="ERB-eT-9jN"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="I72-KI-xkO" firstAttribute="trailing" secondItem="ERB-eT-9jN" secondAttribute="trailing" id="94o-Aq-eR4"/>
+                            <constraint firstItem="f6V-Sj-xp3" firstAttribute="leading" secondItem="ERB-eT-9jN" secondAttribute="leading" id="DXk-ho-cgB"/>
+                            <constraint firstItem="AXd-Hb-kjE" firstAttribute="leading" secondItem="ERB-eT-9jN" secondAttribute="leading" id="W3e-pH-8C1"/>
+                            <constraint firstItem="I72-KI-xkO" firstAttribute="bottom" secondItem="ERB-eT-9jN" secondAttribute="bottom" id="YSz-s1-aI6"/>
+                            <constraint firstItem="I72-KI-xkO" firstAttribute="top" secondItem="AXd-Hb-kjE" secondAttribute="bottom" id="bsF-q0-tpM"/>
+                            <constraint firstItem="f6V-Sj-xp3" firstAttribute="top" secondItem="ERB-eT-9jN" secondAttribute="top" id="cuU-rm-wud"/>
+                            <constraint firstItem="AXd-Hb-kjE" firstAttribute="top" secondItem="f6V-Sj-xp3" secondAttribute="bottom" id="fmV-aw-334"/>
+                            <constraint firstItem="AXd-Hb-kjE" firstAttribute="trailing" secondItem="ERB-eT-9jN" secondAttribute="trailing" id="iWp-sf-fGJ"/>
+                            <constraint firstItem="I72-KI-xkO" firstAttribute="leading" secondItem="ERB-eT-9jN" secondAttribute="leading" id="kzK-H6-RlA"/>
+                            <constraint firstItem="f6V-Sj-xp3" firstAttribute="trailing" secondItem="ERB-eT-9jN" secondAttribute="trailing" id="xTT-Da-YSp"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="tj5-E6-f7A"/>
+                    <connections>
+                        <outlet property="segmentView" destination="f6V-Sj-xp3" id="Sqy-Gq-SxO"/>
+                        <outlet property="tableView" destination="I72-KI-xkO" id="7Hp-Rh-HJs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DOm-QO-kAH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
