--- a/MobileApps/View/Base.lproj/Main.storyboard
+++ b/MobileApps/View/Base.lproj/Main.storyboard
@@ -71,12 +71,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="EvK-ZR-sCY">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="EvK-ZR-sCY">
                                 <rect key="frame" x="0.0" y="44" width="414" height="300"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="ekC-sD-J6w"/>
-                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Mcb-m7-9lf">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -102,7 +99,7 @@
                                     <segue destination="G1X-zG-NBL" kind="embed" id="pJe-bh-F3H"/>
                                 </connections>
                             </containerView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cEp-5x-6JT">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cEp-5x-6JT">
                                 <rect key="frame" x="10" y="354" width="394" height="186"/>
                                 <string key="text">Nokia is back in the mobile phone game and after a small price drop to the Nokia 6 we've now seen it enter our best cheap phone list. It comes with a Full HD 5.5-inch display, full metal design and a fingerprint scanner for added security. The battery isn't incredible on the Nokia 6, but it's not awful either making this one of our favorite affordable phones on the market right now.</string>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
@@ -117,6 +114,7 @@
                             <constraint firstItem="EvK-ZR-sCY" firstAttribute="leading" secondItem="2hK-Rv-7li" secondAttribute="leading" id="8fM-G5-c8n"/>
                             <constraint firstItem="EvK-ZR-sCY" firstAttribute="trailing" secondItem="2hK-Rv-7li" secondAttribute="trailing" id="Nfe-DB-0zR"/>
                             <constraint firstItem="EvK-ZR-sCY" firstAttribute="top" secondItem="2hK-Rv-7li" secondAttribute="top" id="Xur-oD-gfV"/>
+                            <constraint firstItem="2hK-Rv-7li" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="cEp-5x-6JT" secondAttribute="bottom" constant="322" id="cia-aD-lsc"/>
                             <constraint firstItem="cEp-5x-6JT" firstAttribute="top" secondItem="EvK-ZR-sCY" secondAttribute="bottom" constant="10" id="pZv-gE-riB"/>
                             <constraint firstItem="2hK-Rv-7li" firstAttribute="trailing" secondItem="cEp-5x-6JT" secondAttribute="trailing" constant="10" id="zOM-h1-kUR"/>
                         </constraints>
