--- a/MobileApps/View/Cell/AllTableViewCell.xib
+++ b/MobileApps/View/Cell/AllTableViewCell.xib
@@ -17,14 +17,15 @@
                 <rect key="frame" x="0.0" y="0.0" width="352" height="162"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mobile" translatesAutoresizingMaskIntoConstraints="NO" id="7gz-OK-bVi">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7gz-OK-bVi">
                         <rect key="frame" x="10" y="10" width="105" height="142"/>
                         <constraints>
+                            <constraint firstAttribute="height" constant="142" id="Hos-6H-ind"/>
                             <constraint firstAttribute="width" constant="105" id="eeC-pd-m6I"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Motorola M10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Omw-bR-r7I">
-                        <rect key="frame" x="120" y="36" width="114.5" height="22"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Omw-bR-r7I">
+                        <rect key="frame" x="120" y="36" width="0.0" height="22"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="22" id="9Q5-oN-7Dc"/>
                         </constraints>
@@ -42,14 +43,14 @@
                             <action selector="favouriteButtonTap:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="T1e-2e-J40"/>
                         </connections>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="this thee sdnbfndsbf  bdgfbsdj bsjdbfjsb bsjdfbjsbsdkjnfbjknsdjkbnjkdsnjkfnbkjsdnfkjbnskjdnbkjnskdjb" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qes-F2-cTU">
-                        <rect key="frame" x="120" y="68" width="202" height="38.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qes-F2-cTU">
+                        <rect key="frame" x="120" y="68" width="202" height="0.0"/>
                         <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price: 1200" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kau-f1-Kx2">
-                        <rect key="frame" x="120" y="116.5" width="65.5" height="18"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kau-f1-Kx2">
+                        <rect key="frame" x="120" y="78" width="0.0" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="xw9-kS-Ffe"/>
                         </constraints>
@@ -57,8 +58,8 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating: 4.5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IJL-kg-gn9">
-                        <rect key="frame" x="258.5" y="116.5" width="63.5" height="18"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IJL-kg-gn9">
+                        <rect key="frame" x="322" y="78" width="0.0" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="7pP-0M-sPT"/>
                         </constraints>
@@ -78,7 +79,6 @@
                     <constraint firstItem="ilf-Kt-RQd" firstAttribute="centerY" secondItem="Omw-bR-r7I" secondAttribute="centerY" id="Wfs-gw-qSC"/>
                     <constraint firstItem="kau-f1-Kx2" firstAttribute="top" secondItem="qes-F2-cTU" secondAttribute="bottom" constant="10" id="Y90-om-N7z"/>
                     <constraint firstItem="IJL-kg-gn9" firstAttribute="top" secondItem="qes-F2-cTU" secondAttribute="bottom" constant="10" id="aQ0-A6-Gcx"/>
-                    <constraint firstAttribute="bottom" secondItem="7gz-OK-bVi" secondAttribute="bottom" constant="10" id="bXs-qq-AEh"/>
                     <constraint firstItem="qes-F2-cTU" firstAttribute="top" secondItem="Omw-bR-r7I" secondAttribute="bottom" constant="10" id="gU4-SR-mix"/>
                     <constraint firstAttribute="trailingMargin" secondItem="qes-F2-cTU" secondAttribute="trailing" constant="10" id="gvr-Ib-7RX"/>
                     <constraint firstItem="qes-F2-cTU" firstAttribute="leading" secondItem="7gz-OK-bVi" secondAttribute="trailing" constant="5" id="v0Y-Z9-nOc"/>
@@ -96,7 +96,4 @@
             <point key="canvasLocation" x="188.40579710144928" y="121.875"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="mobile" width="841" height="800"/>
-    </resources>
 </document>
